feat: add student CRUD
