# src/main/java/hei/student/schoolm/endpoint/rest/security/SecurityConfig.java
@@ -77,6 +77,14 @@ public class SecurityConfig {
                     .hasRole("ADMIN")
                     .requestMatchers(PUT, "/students/**")
                     .hasRole("ADMIN")
+                    .requestMatchers(PUT, "/students")
+                    .hasRole("ADMIN")
+                    .requestMatchers(DELETE, "/students/*")
+                    .hasRole("ADMIN")
+                    .requestMatchers(GET, "/students")
+                    .hasAnyRole("ADMIN", "TEACHER")
+                    .requestMatchers(GET, "/students/*")
+                    .hasAnyRole("ADMIN", "TEACHER", "STUDENT")
                     .requestMatchers(PUT, "/courses/**")
                     .hasRole("ADMIN")
                     .requestMatchers(PUT, "/grades/**")
